# gensl

./: .gitignore  .gitmodules  LICENSE  README.md  README.txt  binary-plan.txt  dune  gensl-scratchpad.txt  gensl.ml  genslex.ml  genslex.mll  genslex_sedlex.ml  gensljs.js  index.html  intf.ml  kxcteam-gensl.opam  parser.ml  parsing.ml  readermacro.ml  unparse.ml  utils.ml
js/: .gitignore  dune  gensljs.ml  gensltry.ml  index.html  site-files.txt
prop_tests/: dune  prop_tests.ml
qc_tests/: dune  qc_tests.ml
test/: dune  gensltests.ml  trying.ml
tryout/: dune  sedlex.ml
unicode_html/: dune  unicode_html.ml
unit_tests/: dune  tests.ml
utils/: dune  repl.ml
