(executable
 (name gensljs)
 (public_name kxcteam-gensl.js)
 (libraries gensl kxclib)
 (preprocess (pps kxclib.ppx js_of_ocaml-ppx js_of_ocaml-ppx_deriving_json))
 (flags (:standard
          -open Kxclib -g))
 (modes byte))

(rule
  (targets gensljs.js)
  (action (run %{bin:js_of_ocaml} --pretty --source-map %{dep:gensljs.bc} -o %{targets})))
