(executable
 (name gensljs)
 (modules gensljs)
 (public_name kxcteam-gensl.js)
 (libraries genslib kxclib)
 (preprocess (pps kxclib.ppx js_of_ocaml-ppx js_of_ocaml-ppx_deriving_json))
 (flags (:standard
          -open Kxclib -g))
 (modes byte))

(executable
 (name gensltry)
 (modules gensltry)
 (libraries genslib kxclib)
 (preprocess (pps kxclib.ppx js_of_ocaml-ppx js_of_ocaml-ppx_deriving_json))
 (flags (:standard
          -open Kxclib -g)))

(rule
  (targets gensljs.js)
  (action (run %{bin:js_of_ocaml} --pretty --source-map %{dep:gensljs.bc} -o %{targets})))

(rule
 (target built-site.tar)
 (mode (promote (until-clean)))
 (action (run tar cf %{target} %{read-lines:site-files.txt}))
 (deps index.html (file gensljs.js)))
